fix: better contrast to primary button hover state

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -27,8 +27,7 @@
     &:active {
       background-color: transparent;
       border-color: var(--color-text-header);
-      color: var(--color-primary);
-      filter: brightness(120%);
+      color: var(--color-text-body);
     }
   }
 
