--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -21,6 +21,7 @@
   }
 
   &__author {
+    color: var(--color-text-header);
     font-weight: bold;
     position: absolute;
     bottom: var(--space-xs);
